<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/inches_label" />

            <EditText
                android:id="@+id/inputText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/inches_input_hint"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/result_label" />

            <TextView
                android:id="@+id/resultTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <Button
            android:id="@+id/toMetersButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to_meters_button" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <Button
            android:id="@+id/toFeetButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to_feet" />

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <Button
            android:id="@+id/toMilesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to_miles" />

        <View
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <Button
            android:id="@+id/clearButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_all" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>